Refactoring the Post List scenario

--- a/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
+++ b/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
@@ -219,7 +219,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="c13-Kc-vnv" userLabel="Inputs Stack">
-                                <rect key="frame" x="16" y="20" width="288" height="437.5"/>
+                                <rect key="frame" x="16" y="72" width="288" height="437.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="a09-lk-Yzt" userLabel="Space Type Stack">
                                         <rect key="frame" x="0.0" y="0.0" width="288" height="70"/>
@@ -367,7 +367,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yuk-4I-gnT">
-                                <rect key="frame" x="135" y="477.5" width="50" height="40"/>
+                                <rect key="frame" x="135" y="529.5" width="50" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="bHP-o0-l0b"/>
                                     <constraint firstAttribute="height" constant="40" id="fDj-fs-xUw"/>
@@ -378,11 +378,30 @@
                                     <action selector="createNewPost:" destination="QaU-jc-DN1" eventType="touchUpInside" id="z0V-xK-WKM"/>
                                 </connections>
                             </button>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="moH-KL-qzP">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="0fj-bF-0B8"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Add Job" id="pfg-sU-RWL">
+                                        <barButtonItem key="backBarButtonItem" title="Back" id="A76-6p-yJp"/>
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Hgb-Zc-feU">
+                                            <connections>
+                                                <segue destination="8sB-CU-L7d" kind="show" id="DkV-ZY-Dp4"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="moH-KL-qzP" firstAttribute="top" secondItem="ogn-NP-x19" secondAttribute="bottom" id="3Lf-nI-fgu"/>
                             <constraint firstItem="yuk-4I-gnT" firstAttribute="centerX" secondItem="c13-Kc-vnv" secondAttribute="centerX" id="3e6-YY-jjo"/>
-                            <constraint firstItem="c13-Kc-vnv" firstAttribute="top" secondItem="ogn-NP-x19" secondAttribute="bottom" id="OWC-hT-0Za"/>
+                            <constraint firstItem="c13-Kc-vnv" firstAttribute="top" secondItem="moH-KL-qzP" secondAttribute="bottom" constant="8" id="C8U-ES-248"/>
+                            <constraint firstAttribute="trailing" secondItem="moH-KL-qzP" secondAttribute="trailing" id="EXo-eg-0WO"/>
+                            <constraint firstItem="moH-KL-qzP" firstAttribute="leading" secondItem="4Tj-3b-mva" secondAttribute="leading" id="FW0-OK-KGS"/>
                             <constraint firstItem="c13-Kc-vnv" firstAttribute="centerX" secondItem="4Tj-3b-mva" secondAttribute="centerX" id="hxs-I0-mAP"/>
                             <constraint firstItem="c13-Kc-vnv" firstAttribute="leading" secondItem="4Tj-3b-mva" secondAttribute="leadingMargin" id="lSQ-eH-QEb"/>
                             <constraint firstItem="yuk-4I-gnT" firstAttribute="top" secondItem="c13-Kc-vnv" secondAttribute="bottom" constant="20" id="w4a-Hw-cfs"/>
@@ -694,6 +713,59 @@
             </objects>
             <point key="canvasLocation" x="2908" y="1592"/>
         </scene>
+        <!--Post ListVC-->
+        <scene sceneID="No9-yq-YHS">
+            <objects>
+                <viewController id="8sB-CU-L7d" customClass="PostListVC" customModule="CleanerSeeker" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rsF-8q-VJ0"/>
+                        <viewControllerLayoutGuide type="bottom" id="Scm-8m-rpB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HQP-s6-LGy">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0jN-ww-gzr">
+                                <rect key="frame" x="16" y="72" width="288" height="496"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yty-dj-OhD">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="HlL-4o-DTH"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Posted Job List" id="bS9-QM-szR">
+                                        <barButtonItem key="backBarButtonItem" title="Back" id="Yr4-WF-adG"/>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="6mX-KF-nFr">
+                                            <connections>
+                                                <segue destination="QaU-jc-DN1" kind="show" id="p6g-L2-8rX"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="yty-dj-OhD" secondAttribute="trailing" id="464-9g-xZ8"/>
+                            <constraint firstItem="0jN-ww-gzr" firstAttribute="trailing" secondItem="HQP-s6-LGy" secondAttribute="trailingMargin" id="DfL-8Z-NxS"/>
+                            <constraint firstItem="0jN-ww-gzr" firstAttribute="leading" secondItem="HQP-s6-LGy" secondAttribute="leadingMargin" id="FFc-mZ-uzX"/>
+                            <constraint firstItem="yty-dj-OhD" firstAttribute="top" secondItem="HQP-s6-LGy" secondAttribute="top" id="GfO-Eu-1wR"/>
+                            <constraint firstItem="Scm-8m-rpB" firstAttribute="top" secondItem="0jN-ww-gzr" secondAttribute="bottom" id="HfL-Ve-iRs"/>
+                            <constraint firstItem="yty-dj-OhD" firstAttribute="leading" secondItem="HQP-s6-LGy" secondAttribute="leading" id="NBY-iu-Ze8"/>
+                            <constraint firstItem="0jN-ww-gzr" firstAttribute="top" secondItem="yty-dj-OhD" secondAttribute="bottom" constant="8" id="SMS-Df-Bee"/>
+                            <constraint firstItem="0jN-ww-gzr" firstAttribute="centerX" secondItem="HQP-s6-LGy" secondAttribute="centerX" id="f89-mS-v1w"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="0jN-ww-gzr" id="fsD-OE-8mQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Lu-dK-gz1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2904.375" y="2355.6338028169016"/>
+        </scene>
         <!--Sign Up-->
         <scene sceneID="XVS-8s-14n">
             <objects>
@@ -840,5 +912,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="RII-dt-dA0"/>
         <segue reference="gjw-vA-QEG"/>
+        <segue reference="p6g-L2-8rX"/>
     </inferredMetricsTieBreakers>
 </document>
