--- a/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
+++ b/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
@@ -441,8 +441,9 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nnf-vS-oz5">
                                 <rect key="frame" x="0.0" y="20" width="320" height="673"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cards_1" translatesAutoresizingMaskIntoConstraints="NO" id="Ar4-1H-MYM">
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ar4-1H-MYM">
                                         <rect key="frame" x="110" y="8" width="100" height="100"/>
+                                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="PXn-rf-mil"/>
                                             <constraint firstAttribute="width" constant="100" id="k21-3J-jmq"/>
@@ -903,7 +904,6 @@
     </scenes>
     <resources>
         <image name="btn_undo" width="21" height="21"/>
-        <image name="cards_1" width="345" height="460"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="RII-dt-dA0"/>
