--- a/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
+++ b/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
@@ -159,53 +159,6 @@
             </objects>
             <point key="canvasLocation" x="2153" y="129"/>
         </scene>
-        <!--Post List View Controller-->
-        <scene sceneID="OkQ-ab-IOc">
-            <objects>
-                <tableViewController id="FZp-JO-fyR" customClass="PostListViewController" customModule="CleanerSeeker" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="8V5-go-kkg">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="post_list" textLabel="Jfl-ec-SlP" detailTextLabel="yPV-cd-d2Q" style="IBUITableViewCellStyleSubtitle" id="ouz-b3-NLh">
-                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ouz-b3-NLh" id="qWl-GH-1EC">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Jfl-ec-SlP">
-                                            <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="yPV-cd-d2Q">
-                                            <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="FZp-JO-fyR" id="dgQ-Jc-Glo"/>
-                            <outlet property="delegate" destination="FZp-JO-fyR" id="RiN-2y-SQH"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" systemItem="history" id="w2n-L2-xqa"/>
-                    <toolbarItems/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Yi2-g8-0RO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2798" y="2419"/>
-        </scene>
         <!--Add New Post View Controller-->
         <scene sceneID="5Ze-xo-r9H">
             <objects>
@@ -219,7 +172,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="c13-Kc-vnv" userLabel="Inputs Stack">
-                                <rect key="frame" x="16" y="20" width="288" height="437.5"/>
+                                <rect key="frame" x="16" y="72" width="288" height="437.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="a09-lk-Yzt" userLabel="Space Type Stack">
                                         <rect key="frame" x="0.0" y="0.0" width="288" height="70"/>
@@ -370,7 +323,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yuk-4I-gnT">
-                                <rect key="frame" x="135" y="477.5" width="50" height="40"/>
+                                <rect key="frame" x="135" y="529.5" width="50" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="bHP-o0-l0b"/>
                                     <constraint firstAttribute="height" constant="40" id="fDj-fs-xUw"/>
@@ -381,13 +334,31 @@
                                     <action selector="createNewPost:" destination="QaU-jc-DN1" eventType="touchUpInside" id="z0V-xK-WKM"/>
                                 </connections>
                             </button>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="apX-zd-0pv">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="98S-rr-G5y"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Title" id="e0C-UK-3Sk">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="aRf-3G-Bh8">
+                                            <connections>
+                                                <segue destination="J1a-4a-EOW" kind="show" id="j2P-27-eQ5"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="yuk-4I-gnT" firstAttribute="centerX" secondItem="c13-Kc-vnv" secondAttribute="centerX" id="3e6-YY-jjo"/>
-                            <constraint firstItem="c13-Kc-vnv" firstAttribute="top" secondItem="ogn-NP-x19" secondAttribute="bottom" id="OWC-hT-0Za"/>
+                            <constraint firstAttribute="trailing" secondItem="apX-zd-0pv" secondAttribute="trailing" id="BVd-zK-kkT"/>
+                            <constraint firstItem="apX-zd-0pv" firstAttribute="top" secondItem="ogn-NP-x19" secondAttribute="bottom" id="U4A-nF-dEZ"/>
+                            <constraint firstItem="c13-Kc-vnv" firstAttribute="top" secondItem="apX-zd-0pv" secondAttribute="bottom" constant="8" id="aWt-FN-BvN"/>
                             <constraint firstItem="c13-Kc-vnv" firstAttribute="centerX" secondItem="4Tj-3b-mva" secondAttribute="centerX" id="hxs-I0-mAP"/>
                             <constraint firstItem="c13-Kc-vnv" firstAttribute="leading" secondItem="4Tj-3b-mva" secondAttribute="leadingMargin" id="lSQ-eH-QEb"/>
+                            <constraint firstItem="apX-zd-0pv" firstAttribute="leading" secondItem="4Tj-3b-mva" secondAttribute="leading" id="sxg-fT-R38"/>
                             <constraint firstItem="yuk-4I-gnT" firstAttribute="top" secondItem="c13-Kc-vnv" secondAttribute="bottom" constant="20" id="w4a-Hw-cfs"/>
                             <constraint firstAttribute="trailingMargin" secondItem="c13-Kc-vnv" secondAttribute="trailing" id="ySU-Jo-IWQ"/>
                         </constraints>
@@ -685,18 +656,9 @@
                                     <constraint firstAttribute="width" constant="100" id="Vxt-0n-4ZW"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="smT-aF-yNZ">
-                                <rect key="frame" x="240" y="481" width="64" height="30"/>
-                                <state key="normal" title="Add Stub"/>
-                                <connections>
-                                    <segue destination="QaU-jc-DN1" kind="show" id="FSP-v6-mry"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.78095160590277779" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="smT-aF-yNZ" firstAttribute="trailing" secondItem="QID-C3-Vol" secondAttribute="trailing" id="F6i-dZ-CMh"/>
-                            <constraint firstItem="SZs-wU-dph" firstAttribute="top" secondItem="smT-aF-yNZ" secondAttribute="bottom" constant="8" symbolic="YES" id="RsT-sQ-Lgj"/>
                             <constraint firstItem="QID-C3-Vol" firstAttribute="top" secondItem="jHz-5F-BAw" secondAttribute="bottom" id="SgB-mV-DAh"/>
                             <constraint firstItem="eDP-84-Qc2" firstAttribute="centerX" secondItem="yOF-LE-Omc" secondAttribute="centerX" id="lMj-2E-t9I"/>
                             <constraint firstItem="QID-C3-Vol" firstAttribute="leading" secondItem="yOF-LE-Omc" secondAttribute="leadingMargin" id="sis-ut-V9I"/>
@@ -757,14 +719,64 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="FZp-JO-fyR" kind="relationship" relationship="viewControllers" id="gjw-vA-QEG"/>
-                        <segue destination="zZW-Pu-TDm" kind="relationship" relationship="viewControllers" id="KOr-dW-A4d"/>
-                        <segue destination="FZp-JO-fyR" kind="relationship" relationship="viewControllers" id="UK3-4b-pgc"/>
+                        <segue destination="J1a-4a-EOW" kind="relationship" relationship="viewControllers" id="Jqw-Wr-nDq"/>
+                        <segue destination="zZW-Pu-TDm" kind="relationship" relationship="viewControllers" id="r4a-jc-dzk"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ciQ-8O-cDX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1943" y="1592"/>
+        </scene>
+        <!--Post ListVC-->
+        <scene sceneID="fLQ-TE-JZg">
+            <objects>
+                <viewController id="J1a-4a-EOW" customClass="PostListVC" customModule="CleanerSeeker" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tdX-aE-M3w"/>
+                        <viewControllerLayoutGuide type="bottom" id="bWX-JI-s49"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9Nu-2A-sf7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xf1-m5-yBT">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="7J2-bT-MY7"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Post Jobs History" id="Prd-f9-oCx">
+                                        <barButtonItem key="backBarButtonItem" title="Back" id="rnF-5w-LFH"/>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Rxr-cH-bbK">
+                                            <connections>
+                                                <segue destination="QaU-jc-DN1" kind="show" id="OGO-9R-f8L"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="E5I-RJ-l77">
+                                <rect key="frame" x="16" y="72" width="288" height="447"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="E5I-RJ-l77" secondAttribute="trailing" id="A8c-x3-8Rn"/>
+                            <constraint firstItem="xf1-m5-yBT" firstAttribute="leading" secondItem="9Nu-2A-sf7" secondAttribute="leading" id="Iji-Ta-GJ1"/>
+                            <constraint firstAttribute="trailing" secondItem="xf1-m5-yBT" secondAttribute="trailing" id="j4w-PG-BH7"/>
+                            <constraint firstItem="E5I-RJ-l77" firstAttribute="top" secondItem="xf1-m5-yBT" secondAttribute="bottom" constant="8" id="sgt-K7-Qo7"/>
+                            <constraint firstItem="E5I-RJ-l77" firstAttribute="centerX" secondItem="9Nu-2A-sf7" secondAttribute="centerX" id="ssT-hV-eli"/>
+                            <constraint firstItem="xf1-m5-yBT" firstAttribute="top" secondItem="tdX-aE-M3w" secondAttribute="bottom" id="uxL-fw-uak"/>
+                            <constraint firstItem="bWX-JI-s49" firstAttribute="top" secondItem="E5I-RJ-l77" secondAttribute="bottom" id="yQ4-va-flW"/>
+                            <constraint firstItem="E5I-RJ-l77" firstAttribute="leading" secondItem="9Nu-2A-sf7" secondAttribute="leadingMargin" id="yxu-fA-rSI"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="history" id="UgT-2f-SRW"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SGd-LW-7yW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2951" y="1592"/>
         </scene>
         <!--Sign Up-->
         <scene sceneID="XVS-8s-14n">
@@ -910,7 +922,7 @@
         <image name="btn_undo" width="21" height="21"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="gjw-vA-QEG"/>
-        <segue reference="KOr-dW-A4d"/>
+        <segue reference="r4a-jc-dzk"/>
+        <segue reference="Jqw-Wr-nDq"/>
     </inferredMetricsTieBreakers>
 </document>
