--- a/CleanerSeeker/CleanerSeeker/LoadingScreen.xib
+++ b/CleanerSeeker/CleanerSeeker/LoadingScreen.xib
@@ -12,11 +12,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SpinnerView" customModule="CleanerSeeker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="209" height="165"/>
+            <rect key="frame" x="0.0" y="0.0" width="96" height="84"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-49.5" y="-179.5"/>
+            <point key="canvasLocation" x="-106" y="-220"/>
         </view>
     </objects>
 </document>
