--- a/CleanerSeeker/CleanerSeeker/LoadingScreen.xib
+++ b/CleanerSeeker/CleanerSeeker/LoadingScreen.xib
@@ -4,19 +4,39 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SpinnerView" customModule="CleanerSeeker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="96" height="84"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-106" y="-220"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nAy-0v-GYf" customClass="SpinnerView" customModule="CleanerSeeker" customModuleProvider="target">
+                    <rect key="frame" x="87" y="233" width="200" height="200"/>
+                    <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="CtW-w1-Lmg"/>
+                        <constraint firstAttribute="height" constant="200" id="bWW-CV-Gsd"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading...." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UST-T8-7nR">
+                    <rect key="frame" x="137" y="323" width="101" height="24"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
+            <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="UST-T8-7nR" secondAttribute="bottom" constant="320" id="0Ju-ju-rrM"/>
+                <constraint firstItem="nAy-0v-GYf" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="JYJ-xr-DnK"/>
+                <constraint firstItem="nAy-0v-GYf" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="U3l-5o-sCK"/>
+                <constraint firstItem="UST-T8-7nR" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="sC6-Ft-ZxD"/>
+            </constraints>
+            <point key="canvasLocation" x="-106.5" y="-220.5"/>
         </view>
     </objects>
 </document>
